tests/warn/runtimeNames.jo
import js.javascript     // error

def main = javascript "console.log(\"hello\")"  // error // error
